// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBar > should render 1`] = `
<DocumentFragment>
  <div
    class="relative -mx-4 lg:hidden"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mx-4 flex cursor-pointer items-center space-x-4 overflow-hidden rounded-xl border border-theme-primary-100 p-3 dark:border-theme-secondary-800 sm:p-6"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              viewBox="0 0 20 20"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 15.5h18M1 10h18M1 4.5h18"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <span
            class="font-semibold leading-tight"
          >
            General
          </span>
        </div>
      </span>
    </div>
  </div>
  <div
    class="css-cb19tw"
  >
    <ul>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="absolute inset-y-0 left-0 w-1 rounded bg-theme-primary-600"
          />
          <div
            class="mr-3"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M11 15h8M1 15h4M8 18c-1.7 0-3-1.4-3-3 0-1.7 1.4-3 3-3s3 1.2 3 3h0c0 1.7-1.3 3-3 3h0zM12.9 5H1M16 8c1.7 0 3-1.4 3-3s-1.4-3-3-3c-1.7 0-3 1.4-3 3s1.3 3 3 3c-.1 0 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="lock"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="arrow-up-turn-bracket"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7.6 12.2V9.3c0-2.1 1.7-3.7 3.7-3.7h7.4"
                  />
                  <path
                    d="M14 10.3l4.7-4.7L14 1m5 12.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar > should render responsive dropdown 1`] = `
<DocumentFragment>
  <div
    class="relative -mx-4 lg:hidden"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mx-4 flex cursor-pointer items-center space-x-4 overflow-hidden rounded-xl border border-theme-primary-100 p-3 dark:border-theme-secondary-800 sm:p-6"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              viewBox="0 0 20 20"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 15.5h18M1 10h9M1 4.5h14.3"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <span
            class="font-semibold leading-tight"
          >
            General
          </span>
        </div>
      </span>
      <div
        class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl w-full css-jowtd0"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <ul
          data-testid="dropdown__options"
        >
          <li
            class="css-1s8mt7a"
            data-testid="dropdown__option--0"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-600 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M11 15h8M1 15h4M8 18c-1.7 0-3-1.4-3-3 0-1.7 1.4-3 3-3s3 1.2 3 3h0c0 1.7-1.3 3-3 3h0zM12.9 5H1M16 8c1.7 0 3-1.4 3-3s-1.4-3-3-3c-1.7 0-3 1.4-3 3s1.3 3 3 3c-.1 0 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
            <span>
              General
            </span>
          </li>
          <li
            class="css-8ahleb"
            data-testid="dropdown__option--1"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="lock"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                  />
                </g>
              </svg>
            </div>
            <span>
              Password
            </span>
          </li>
          <li
            class="css-8ahleb"
            data-testid="dropdown__option--2"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="arrow-up-turn-bracket"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7.6 12.2V9.3c0-2.1 1.7-3.7 3.7-3.7h7.4"
                  />
                  <path
                    d="M14 10.3l4.7-4.7L14 1m5 12.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                  />
                </g>
              </svg>
            </div>
            <span>
              Export
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="css-cb19tw"
  >
    <ul>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="absolute inset-y-0 left-0 w-1 rounded bg-theme-primary-600"
          />
          <div
            class="mr-3"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M11 15h8M1 15h4M8 18c-1.7 0-3-1.4-3-3 0-1.7 1.4-3 3-3s3 1.2 3 3h0c0 1.7-1.3 3-3 3h0zM12.9 5H1M16 8c1.7 0 3-1.4 3-3s-1.4-3-3-3c-1.7 0-3 1.4-3 3s1.3 3 3 3c-.1 0 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="lock"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="arrow-up-turn-bracket"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7.6 12.2V9.3c0-2.1 1.7-3.7 3.7-3.7h7.4"
                  />
                  <path
                    d="M14 10.3l4.7-4.7L14 1m5 12.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar > should render responsive dropdown 2`] = `
<DocumentFragment>
  <div
    class="relative -mx-4 lg:hidden"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mx-4 flex cursor-pointer items-center space-x-4 overflow-hidden rounded-xl border border-theme-primary-100 p-3 dark:border-theme-secondary-800 sm:p-6"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              viewBox="0 0 20 20"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 15.5h18M1 10h9M1 4.5h14.3"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <span
            class="font-semibold leading-tight"
          >
            General
          </span>
        </div>
      </span>
      <div
        class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl w-full css-jowtd0"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <ul
          data-testid="dropdown__options"
        >
          <li
            class="css-1s8mt7a"
            data-testid="dropdown__option--0"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-600 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M11 15h8M1 15h4M8 18c-1.7 0-3-1.4-3-3 0-1.7 1.4-3 3-3s3 1.2 3 3h0c0 1.7-1.3 3-3 3h0zM12.9 5H1M16 8c1.7 0 3-1.4 3-3s-1.4-3-3-3c-1.7 0-3 1.4-3 3s1.3 3 3 3c-.1 0 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
            <span>
              General
            </span>
          </li>
          <li
            class="css-8ahleb"
            data-testid="dropdown__option--1"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="lock"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                  />
                </g>
              </svg>
            </div>
            <span>
              Password
            </span>
          </li>
          <li
            class="css-8ahleb"
            data-testid="dropdown__option--2"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="arrow-up-turn-bracket"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7.6 12.2V9.3c0-2.1 1.7-3.7 3.7-3.7h7.4"
                  />
                  <path
                    d="M14 10.3l4.7-4.7L14 1m5 12.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                  />
                </g>
              </svg>
            </div>
            <span>
              Export
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="css-cb19tw"
  >
    <ul>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="absolute inset-y-0 left-0 w-1 rounded bg-theme-primary-600"
          />
          <div
            class="mr-3"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M11 15h8M1 15h4M8 18c-1.7 0-3-1.4-3-3 0-1.7 1.4-3 3-3s3 1.2 3 3h0c0 1.7-1.3 3-3 3h0zM12.9 5H1M16 8c1.7 0 3-1.4 3-3s-1.4-3-3-3c-1.7 0-3 1.4-3 3s1.3 3 3 3c-.1 0 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="lock"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="arrow-up-turn-bracket"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7.6 12.2V9.3c0-2.1 1.7-3.7 3.7-3.7h7.4"
                  />
                  <path
                    d="M14 10.3l4.7-4.7L14 1m5 12.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar > should render responsive dropdown 3`] = `
<DocumentFragment>
  <div
    class="relative -mx-4 lg:hidden"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mx-4 flex cursor-pointer items-center space-x-4 overflow-hidden rounded-xl border border-theme-primary-100 p-3 dark:border-theme-secondary-800 sm:p-6"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              viewBox="0 0 20 20"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 15.5h18M1 10h9M1 4.5h14.3"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <span
            class="font-semibold leading-tight"
          >
            General
          </span>
        </div>
      </span>
      <div
        class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl w-full css-jowtd0"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <ul
          data-testid="dropdown__options"
        >
          <li
            class="css-1s8mt7a"
            data-testid="dropdown__option--0"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-600 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M11 15h8M1 15h4M8 18c-1.7 0-3-1.4-3-3 0-1.7 1.4-3 3-3s3 1.2 3 3h0c0 1.7-1.3 3-3 3h0zM12.9 5H1M16 8c1.7 0 3-1.4 3-3s-1.4-3-3-3c-1.7 0-3 1.4-3 3s1.3 3 3 3c-.1 0 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
            <span>
              General
            </span>
          </li>
          <li
            class="css-8ahleb"
            data-testid="dropdown__option--1"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="lock"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                  />
                </g>
              </svg>
            </div>
            <span>
              Password
            </span>
          </li>
          <li
            class="css-8ahleb"
            data-testid="dropdown__option--2"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="arrow-up-turn-bracket"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7.6 12.2V9.3c0-2.1 1.7-3.7 3.7-3.7h7.4"
                  />
                  <path
                    d="M14 10.3l4.7-4.7L14 1m5 12.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                  />
                </g>
              </svg>
            </div>
            <span>
              Export
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="css-cb19tw"
  >
    <ul>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="absolute inset-y-0 left-0 w-1 rounded bg-theme-primary-600"
          />
          <div
            class="mr-3"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sliders"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M11 15h8M1 15h4M8 18c-1.7 0-3-1.4-3-3 0-1.7 1.4-3 3-3s3 1.2 3 3h0c0 1.7-1.3 3-3 3h0zM12.9 5H1M16 8c1.7 0 3-1.4 3-3s-1.4-3-3-3c-1.7 0-3 1.4-3 3s1.3 3 3 3c-.1 0 0 0 0 0z"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="lock"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="arrow-up-turn-bracket"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7.6 12.2V9.3c0-2.1 1.7-3.7 3.7-3.7h7.4"
                  />
                  <path
                    d="M14 10.3l4.7-4.7L14 1m5 12.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
